Revision history for {{$dist->name}}

{{$NEXT}}

0.023     2015-03-14 05:09:37Z
          - fix test failures (new in 0.021) on *.0 perl releases
          - give runtime warnings for, and avoid test failures in, blead perl
            (dev builds that represent an upcoming release of perl)

0.022     2015-02-20 02:55:52Z
          - dump 'starting_version' field into meta config data properly
          - fix test failures (new in 0.021) on *.0 perl releases

0.021     2015-02-15 22:51:47Z
          - new 'also_disallow' option, for prohibiting some core modules

0.020     2015-01-03 20:57:36Z
          - re-release to fix problematic $VERSION declaration (RT#101095)

0.019     2014-12-18 06:44:28Z
          - fixed bad parsing of response from cpanmetadb, which resulted in
            invalid failures for dual-life upstream-blead modules when
            check_dual_life_versions = 0

0.018     2014-11-22 04:02:17Z
          - switch from cpanidx to cpanmetadb index

0.017     2014-08-06 05:39:32Z
          - re-release to remove README.pod from shipped dist

0.016     2014-08-01 02:13:32Z
          - fix fatal error when [MetaConfig] is used and starting_version is
            not specified (from 0.015)

0.015     2014-08-01 01:01:20Z
          - fix fatal error when used in conjunction with [MetaConfig]
            (introduced in 0.014)

0.014     2014-07-20 15:35:18Z
          - 'starting_version' now defaults to the perl prerequisite declared
            in the distribution, if it exists

0.013     2013-12-14 21:09:08Z
          - now treats dual-lifed modules that did not exist in core at all at
            the versions being checked against as the same as existing, but
            not being at a new enough version (relevant when
            check_dual_life_versions = 0)

0.012     2013-12-02 04:54:15Z
          - now also checking configure and build prereqs by default
          (RT#91081)
          - new "skip" option

0.011     2013-11-30 17:29:54Z